package com.pattern.structural.decorator;

public interface Car {
    void assembly();
    String description();
}
